test/fail/functionnoreturn.app
// function getA has no return type but tries to return a variable

application test

section datamodel

globals {
  function getA(i : Int) {
    return "a";
  }
}
